FIX: Align css to reflect AA Times Phase 6 project requirements

--- a/stylesheets/components/gear-dropdown.css
+++ b/stylesheets/components/gear-dropdown.css
@@ -35,3 +35,8 @@
 .pref__section-link:hover {
   background-color: #dedede;
 }
+
+/* ME */
+.pref--hidden {
+    display: none;
+}
